feat(core): add start_time and end_time query params on audit log routes
